Fixing the breadcrumb home icon width to prevent horizontal line shift

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -103,6 +103,9 @@
       a {
         color: $CoveoGrey6;
       }
+      .breadcrumbHome > i {
+        width: 12px;
+      }
       .breadcrumbSeparator {
         margin-left: 10px;
         &:before {
